fixed layout issues

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -543,7 +543,7 @@ ul.social-buttons li a:active {
 
 .header-menu-overflow{
 	background-color: $menu-overflow;
-	background-image:url('/images/feature-top-2.jpg');
+	background-image:url('/images/feature-top.jpg');
 	z-index: 100;
 	box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.4);
 }
